--- a/.github/workflows/XPZB.yml
+++ b/.github/workflows/XPZB.yml
@@ -3,7 +3,7 @@ name: XPZB_tianfang
 on:
   workflow_dispatch:
   schedule:
-     - cron: '19,49 0-11 * * *'
+     - cron: '19 0-11 * * *'
   watch:
     types: started
 jobs:
@@ -13,7 +13,7 @@ jobs:
     env:
         XP_iboxpayHEADER: ${{ secrets.XP_iboxpayHEADER }}
         XP_refreshTOKEN: ${{ secrets.XP_refreshTOKEN }}
-        XP_CASH: ${{ secrets.XP_CASH }} 
+        #XP_CASH: ${{ secrets.XP_CASH }} 
         TZ: Asia/shanghai
     steps:
       - name: Checkout
