--- a/.github/workflows/dyhs.yml
+++ b/.github/workflows/dyhs.yml
@@ -3,7 +3,7 @@ name: dyhs
 on:
   workflow_dispatch:
   schedule:
-     - cron: '7 * * * *'
+     - cron: '7 0-11 * * *'
   watch:
     types: started
 jobs:
