--- a/.github/workflows/XPZB.yml
+++ b/.github/workflows/XPZB.yml
@@ -3,7 +3,7 @@ name: XPZB_tianfang
 on:
   workflow_dispatch:
   schedule:
-     - cron: '19 1-8 * * *'
+     - cron: '9/30 0-15 * * *'
   watch:
     types: started
 jobs:
