--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -24,7 +24,7 @@ jobs:
           npm install
           npm install cron
           npm install request
-          curl ipinfo.io/json
+          curl ipinfo.json
       
       - name: '【书旗小说】'
         run: |
