--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -1,9 +1,6 @@
-
 name: 书旗&羊毛赚
 on:
   workflow_dispatch:
-  watch:
-    types: started
   schedule:
     - cron: '0 21 * * *'
 jobs:
@@ -13,7 +10,7 @@ jobs:
       
       - name: Checkout
         run: |
-          git clone   https://github.com/jake3737/Myself.git ~/js
+          git clone https://github.com/xiaokxiansheng/js.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
@@ -25,13 +22,14 @@ jobs:
           npm install cron
           npm install request
           curl ipinfo.io/json
-      
+
       - name: '【书旗小说】'
         run: |
           cd ~/js   
-          #node Task/sqxs.js
+          node Task/sqxs.js
       - name: '【羊毛赚】'
         run: |
           cd ~/js   
-          node ymz.js
+          node Task/ymz.js
  
+
