--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: '【书旗小说】'
         run: |
           cd ~/js   
-          node Task/sqxs.js
+          #node Task/sqxs.js
       - name: '【羊毛赚】'
         run: |
           cd ~/js   
