--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -10,7 +10,7 @@ jobs:
       
       - name: Checkout
         run: |
-          git clone https://github.com/xiaokxiansheng/js.git ~/js
+          git clone https://github.com/jake3737/Myself.git ~/js
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
