--- a/.github/workflows/sqxs.yml
+++ b/.github/workflows/sqxs.yml
@@ -10,7 +10,7 @@ jobs:
       
       - name: Checkout
         run: |
-          git clone https://github.com/lh44575858/....git ~/...
+          git clone https://github.com/jake3737/Myself.git ~/Myself
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
