--- a/.github/workflows/sqxs.yml
+++ b/.github/workflows/sqxs.yml
@@ -1,28 +1,33 @@
-name: 书旗
+name: 书旗小说
 on:
   workflow_dispatch:
+  watch:
+    types: started
   schedule:
-    - cron: '0 21 * * *'
+    - cron: '0 1,3 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest       
     steps:
       
       - name: Checkout
-        run: |
-          git clone https://github.com/jake3737/Myself.git ~/Myself
+        uses: actions/checkout@v2
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
       - name: npm install
         run: |
-          cd ~/...
           npm install
           npm install cron
           npm install request
           curl ipinfo.io/json
+      
       - name: '【书旗小说】'
-        run: |
-          cd ~/...
+        run: |  
           node Task/sqxs.js
+ 
+
+
+
+
