--- a/.github/workflows/yqnb.yml
+++ b/.github/workflows/yqnb.yml
@@ -1,9 +1,12 @@
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
 name: 易趣牛帮
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0,30 0-23 * * *'
+     - cron: '7 0-12,23 * * *'
   watch:
     types: started
 jobs:
@@ -11,12 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        YQNB_yqnbHEADER: ${{ secrets.YQNB_yqnbHEADER }}		
-        YQNB_yqnbBODY: ${{ secrets.YQNB_yqnbBODY }}		
+
+        YQNB_yqnbHEADER: ${{ secrets.  YQNB_yqnbHEADER }}
+        YQNB_yqnbBODY: ${{ secrets.  YQNB_yqnbBODY }}
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/YHSXJ/AC-Script.git ~/AC-Script
+          git clone https://github.com/gz154838009/wgwy.git ~/wgwy
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -24,14 +28,14 @@ jobs:
       - name: npm install
         if: env.YQNB_yqnbHEADER
         run: |
-          cd ~/AC-Script
-          git checkout main
+          cd ~/wgwy
+          git checkout ZIYE
           npm install
       - name: '运行 【易趣牛帮】'
         if: env.YQNB_yqnbHEADER
         run: |
-          cd ~/AC-Script
-          node yqnb.js
+          cd ~/wgwy
+          node Task/yqnb.js
         env:
           
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
@@ -41,3 +45,5 @@ jobs:
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+
+    
