--- a/.github/workflows/yqnb.yml
+++ b/.github/workflows/yqnb.yml
@@ -1,12 +1,9 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: 易趣牛帮
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '7 0-12,23 * * *'
+     - cron: '0,30 0-23 * * *'
   watch:
     types: started
 jobs:
@@ -14,13 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-
-        YQNB_yqnbHEADER: ${{ secrets.  YQNB_yqnbHEADER }}
-        YQNB_yqnbBODY: ${{ secrets.  YQNB_yqnbBODY }}
+        YQNB_yqnbHEADER: ${{ secrets.YQNB_yqnbHEADER }}
+        YQNB_yqnbBODY: ${{ secrets.YQNB_yqnbBODY }}
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/gz154838009/wgwy.git ~/wgwy
+          git clone https://github.com/xbt370/Ac-JS-Script.git ~/Ac-JS-Script
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -28,13 +24,13 @@ jobs:
       - name: npm install
         if: env.YQNB_yqnbHEADER
         run: |
-          cd ~/wgwy
-          git checkout ZIYE
+          cd ~/Ac-JS-Script
+          git checkout main
           npm install
       - name: '运行 【易趣牛帮】'
         if: env.YQNB_yqnbHEADER
-        run: |      
-          node Task/yqnb.js
+        run: |
+          node yqnb/yqnb.js
         env:
 
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
