--- a/.github/workflows/jdtq.yml
+++ b/.github/workflows/jdtq.yml
@@ -67,7 +67,7 @@ jobs:
       - name: '运行 【简单】'
         if: env.JDTQ_jdtquserBODY
         run: |
-          node Task/jdtq.js
+          node jdtq.js
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
