--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -34,7 +34,7 @@ jobs:
           npm install
       - name: '运行 【多功能签到】'
         run: |
-          node other/j.mr_checkin.js
+          node j.mr_checkin.js
 
         env:
           FREE_MY_CLOUD_USERNAME: ${{ secrets.FREE_MY_CLOUD_USERNAME }}
