--- a/.github/workflows/jdtq.yml
+++ b/.github/workflows/jdtq.yml
@@ -3,7 +3,7 @@ name: 简单
 on:
   workflow_dispatch:
   schedule:
-     - cron: '6 * * * *'
+     - cron: '*/20 * * * *'
   watch:
     types: started
 jobs:
